DuPont DevSB/src/objects/ANT_Log__c.object
<CustomObject>
    <description>This object used to store ANT deployment logs. Batch job process this log and convert to metadata dependency object records.</description>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processing_Log__c</fullName>
        <label>Processing Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Org__c</fullName>
        <label>Target Org</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AgCo</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>MatCo</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ANT Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Log__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>ANT Log Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ANT logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>